# OCR-Server

./: Cargo.toml  README.md
src/: main.rs
