[package]
name = "ocr-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
lexopt = "0.3.0"
ocrs = "0.10.0"
rten = "0.16.0"
rten-tensor = "0.16.0"
actix-multipart = "0.7.2"
serde = { version = "1.0.217", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "webp"] }
log = "0.4.26"
env_logger = "0.11.6"
serde_json = "1.0.140"
reqwest = "0.12.12"
